--- a/app-web-backend/Views/Home/Index.cshtml
+++ b/app-web-backend/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome to PUC MINAS, baby!<br />U r going to starving!</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p><iframe width="560" height="315" src="https://www.youtube.com/embed/0CNPR2qNzxk?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
 </div>
